--- a/Assignment_7/Q1.html
+++ b/Assignment_7/Q1.html
@@ -1,1 +1,35 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GUESS THE NUMBER</title>
+</head>
+<body>
+    <button onclick="guessTheNumber()">Play!</button>
+    <script>
+            function guessTheNumber() {
+                let t = Math.floor(Math.random() * 100) + 1;
+                let max=5;
+                for(let i=0;i<max;i++){
+                    let guess = parseInt(prompt("Guess a number between 1 and 100:"));
+                    if (isNaN(guess)) {
+                        alert("Please enter a valid number.");
+                        return;
+                    }
+                    if (guess === t) {
+                        alert("Congratulations! You've guessed the correct number!");
+                        return;
+                    } else if (guess < t) {
+                        alert("Too low. Try again!");
+                    } else {
+                        alert("Too high. Try again!");
+                    }
+                }
+                alert(`Sorry, you've used all ${max} attempts. The correct number was ${t}.`);
+                return;
+            }
+      </script>       
+</body>
+</html>
